fixed page flicker

--- a/kspaze1/src/App.css
+++ b/kspaze1/src/App.css
@@ -49,11 +49,35 @@ img {
 .home img{
   width:100%;
   height:100%;
-  object-fit: cover;
-  object-position:50% 50% ;
+  object-fit: contain;
   position: absolute;
-  inset: 0;
+  inset: -3% 0 0 0;
 }
+
+@media all and (max-width: 1024px) { 
+  .home img{   
+    object-position: 50% 50%;
+}
+}
+
+@media all and (max-width: 768px) { 
+  .home {
+    width:100%;
+    height:auto;
+    min-height:50vh;
+  }
+  .home img{   
+    object-fit: cover;
+    object-position: 50% 50%;
+}
+}
+
+@media all and (max-width: 480px) {
+  .home img{   
+    object-fit: contain;
+}
+}
+
 
 .home-text {
   color:rgb(47, 47, 47);
@@ -293,6 +317,7 @@ footer p {
 
 .page[animation="animateOut"] {
   animation: animateOut 0.5s ease-in;
+  opacity: 0;
 }
 
 
@@ -301,8 +326,8 @@ footer p {
   to {left: 0}
 }
 @keyframes animateOut {
-  from {left: 0}
-  to {left: -1000px}
+  from {left: 0;opacity:1}
+  to {left: -1000px;opacity:1}
 }
 
 .page .closeModal {
