--- a/kspaze1/src/components/Landing.css
+++ b/kspaze1/src/components/Landing.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'ArialicHollow';
-  src: url(../fonts/ArialicHollow.ttf) format('truetype');
-}
-
 html, body {
   width : 100%;
   height: 100%;
@@ -62,23 +57,6 @@ html, body {
   transition: opacity ease-in 500ms;
 }
 
-.landing-container p {
-  z-index: 6;
-  cursor: default;
-  font-size: calc(20px + 1vmin);
-  position: absolute;
-  top:50%;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
-  font-family:Arial, Helvetica, sans-serif ;
-  color:rgb(0, 0, 0);
-  text-shadow: 2px 2px 2px white;
-  animation: fadeIn ease 3s, hoverBounce 1s ease-out infinite alternate;
-}
-
 .overlay-container>img {
   opacity: 0;
   z-index:4;
@@ -107,19 +85,19 @@ opacity: 1;
 #bg
 {
 z-index: 1;
-animation-duration: 1.5s;
+animation-duration: 2s;
 opacity: 1;
 }
 
 #fg
 {
 z-index: 2;
-animation-duration: 2.5s;
+animation-duration: 3s;
 opacity: 1;
 }
 
 #hoverdelay {
-  animation-duration: 2.5s;
+  animation-duration: 3s;
   opacity: 1;
 }
 
@@ -179,42 +157,6 @@ opacity: 1;
   }
 }
 
-@-moz-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-
-@-o-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-
-@-ms-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-}
-}
-
 @keyframes fadeInOut {
   0% {
     opacity:0;
@@ -225,13 +167,4 @@ opacity: 1;
 100% {
   opacity:0;
 }
-}
-
-@keyframes hoverBounce {
-  0% {
-    translate: 0 0.2em;
-  }
-  100% {
-    translate: 0;
-  }
 }
